[metadata]
name = rspy
version = 0.1.0
description = python util for lecture and machine learning.
author = softgood
author-email = softgood@naver.com
license = mit
long-description = file: README
long-description-content-type = text/x-rst; charset=UTF-8
url = http://www.realstudy.net
project-urls =
    Documentation = https://github.com/softgood/rspy
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    tests
